# StuddyBuddyAgent

./: .gitignore  README.md  pyproject.toml
backend/: main.py  requirements.txt
backend/modules/: db.py  image_llm.py  ocr.py  rag.py  speech.py
backend/schemas/: request_models.py
frontend/: formulario.html  index.html  quiz.js  script.js
