[project]
name = "studdybuddyagent"  
version = "0.1.0"
description = "Asistente educativo con RAG, visión de imágenes y transcripción de audio usando OpenAI y FastAPI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]",  
    "openai",    
    "python-dotenv", 
    "sentence-transformers",  
    "chromadb",   
    "pypdf",      
    "python-multipart",
    "typing-extensions",  
    "torch",       
    "pillow",    
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv.workspace]
members = ["."]